--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 div {
     background-color: #1F1F1F;
     width: 320px;
-    height: 500px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,4 +64,5 @@ button {
     font-size: 14px;
     font-weight: 500;
     margin-bottom: 12px;
+    font-weight: 600;
 }
